--- a/Views/PI/HistorialMovimientos.cshtml
+++ b/Views/PI/HistorialMovimientos.cshtml
@@ -136,7 +136,7 @@
                 <select class="select2 form-control input-sm custom-select" id="uu_02" autocomplete="off" style="width: 100%;">
                     <option value="0" selected>Seleccione una opción</option>
                     <option value="1">Registro Agregado</option>
-                    <option value="2">Registro Actualizado - Password</option>
+                    <option value="2">Registro Actualizado</option>
                     <option value="3">Registro Inactivado - Activado</option>
                     @*<option value="4">Otro</option>*@
                 </select>
