--- a/Views/PI/BusquedaAvanzada.cshtml
+++ b/Views/PI/BusquedaAvanzada.cshtml
@@ -296,7 +296,7 @@
                 </div>
                 <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="chektodo">
-                    <label class="custom-control-label" for="chektodo" id="chektodo_l">Todas las columnas</label>
+                    <label class="custom-control-label" for="chektodo" id="chektodo_l"><font size="2">Todas las columnas</font></label>
                 </div>
             </div>
         </div>
