--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -66,7 +66,7 @@
             {
                 <li class="" data-filter-tags="Dashboard">
                     <a href="~/Admin" title="Dashboard" data-filter-tags="Dashboard">
-                        <i class='fa fa-clipboard-check'></i>
+                        <i class='fa fa-flag-checkered'></i>
                         <span class="nav-link-text" data-i18n="Dashboard">Dashboard</span>
                     </a>
                 </li>
@@ -120,7 +120,7 @@
                 {
                     <li class="">
                         <a href="#" title="Catálogos" data-filter-tags="Catálogos">
-                            <i class='fa fa-list'></i>
+                            <i class='fa fa-bars'></i>
                             <span class="nav-link-text" data-i18n="Catálogos">Catálogos</span>
                         </a>
                         <ul>
@@ -277,7 +277,7 @@
 
                     <li class="">
                         <a href="#" title="Propiedad Intelectual" data-filter-tags="Formatos Propiedad Intelectual">
-                            <i class='fa fa-file'></i>
+                            <i class='fa fa-file-alt'></i>
                             <span class="nav-link-text" data-i18n="Formatos Propiedad Intelectual">Formatos P. Intelectual</span>
                         </a>
                         <ul>
@@ -399,7 +399,7 @@
                 {
                     <li class="">
                         <a href="#" title="Propiedad Intelectual" data-filter-tags="Propiedad Intelectual">
-                            <i class='fa fa-box-open'></i>
+                            <i class='fa fa-box'></i>
                             <span class="nav-link-text" data-i18n="Propiedad Intelectual">Propiedad Intelectual</span>
                         </a>
                         <ul>
