--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -358,7 +358,7 @@
             $("#tabla01").dxDataGrid("getDataSource").reload();
         }
         $(document).ready(function () {
-            if (eu_lu.role.id =="8566d71d-72f0-489d-92d4-410804d82e60") { 
+            if (eu_lu.role.id == "8566d71d-72f0-489d-92d4-410804d82e60" || eu_lu.role.id =="a78f7e2f-69af-43aa-9e41-4df768bf24b1") { 
                 $("#tabla01 .dx-toolbar-after").prepend("<a class='btn btn-info btn-sm' href='" + hosturl + "PI/RegistroMarca?tipo=" + tipo_solicitud + "' id='btnuevo'><i class='fa fa-plus'></i> Nuevo registro</button>");
             }
         });
