ajuste y envio mail por server portal juridico

--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -306,13 +306,13 @@
                                         </div>
                                     </div>
                                     @*}*@
-                                    <div class="col-md-3" id="notificacion_titulo_a">
+                                    <div class="col-md-3" id="notificacion_titulo_a" style="display:none;">
                                         <div class="form-group" id="notificacion_tituloc">
                                             <label>Correo de notificación de título</label>
                                             <input type="text" class="form-control input-sm" id="notificacion_titulo" autocomplete="off" />
                                         </div>
                                     </div>
-                                    <div class="col-md-3" id="notificacion_vencimiento_a">
+                                    <div class="col-md-3" id="notificacion_vencimiento_a" style="display:none;">
                                         <div class="form-group" id="notificacion_vencimientoc">
                                             <label>Correo de notificación de vencimiento</label>
                                             <input type="text" class="form-control input-sm" id="notificacion_vencimiento" autocomplete="off" />
